--- a/public/index.html
+++ b/public/index.html
@@ -1428,12 +1428,14 @@
 								<div class="swiper-wrapper">
 										<div class="sTypical__slide swiper-slide">
 											<div class="sTypical__item">
-												<!-- picture-->
-												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
-												</picture>
-												<!-- /picture-->
+												<div class="sTypical__img-wrap" data-fancybox="sTypical" data-src="img/@2x/sTypical-1.png" data-caption="Н-1830">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div>
 												<table>
 													<tr>
 														<th>Н-1830</th>
@@ -1458,12 +1460,14 @@
 										</div>
 										<div class="sTypical__slide swiper-slide">
 											<div class="sTypical__item">
-												<!-- picture-->
-												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
-												</picture>
-												<!-- /picture-->
+												<div class="sTypical__img-wrap" data-fancybox="sTypical" data-src="img/@2x/sTypical-1.png" data-caption="Н-1830">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div>
 												<table>
 													<tr>
 														<th>Н-1830</th>
@@ -1488,12 +1492,14 @@
 										</div>
 										<div class="sTypical__slide swiper-slide">
 											<div class="sTypical__item">
-												<!-- picture-->
-												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
-												</picture>
-												<!-- /picture-->
+												<div class="sTypical__img-wrap" data-fancybox="sTypical" data-src="img/@2x/sTypical-1.png" data-caption="Н-1830">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div>
 												<table>
 													<tr>
 														<th>Н-1830</th>
@@ -1518,12 +1524,14 @@
 										</div>
 										<div class="sTypical__slide swiper-slide">
 											<div class="sTypical__item">
-												<!-- picture-->
-												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
-												</picture>
-												<!-- /picture-->
+												<div class="sTypical__img-wrap" data-fancybox="sTypical" data-src="img/@2x/sTypical-1.png" data-caption="Н-1830">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div>
 												<table>
 													<tr>
 														<th>Н-1830</th>
@@ -1548,12 +1556,14 @@
 										</div>
 										<div class="sTypical__slide swiper-slide">
 											<div class="sTypical__item">
-												<!-- picture-->
-												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
-												</picture>
-												<!-- /picture-->
+												<div class="sTypical__img-wrap" data-fancybox="sTypical" data-src="img/@2x/sTypical-1.png" data-caption="Н-1830">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div>
 												<table>
 													<tr>
 														<th>Н-1830</th>
@@ -1578,12 +1588,14 @@
 										</div>
 										<div class="sTypical__slide swiper-slide">
 											<div class="sTypical__item">
-												<!-- picture-->
-												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
-												</picture>
-												<!-- /picture-->
+												<div class="sTypical__img-wrap" data-fancybox="sTypical" data-src="img/@2x/sTypical-1.png" data-caption="Н-1830">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sTypical-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sTypical-1.webp"/><img class="object-fit-js" src="img/@2x/sTypical-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div>
 												<table>
 													<tr>
 														<th>Н-1830</th>
