--- a/public/04-reviews.html
+++ b/public/04-reviews.html
@@ -50,7 +50,7 @@
 												<ul>
 													<li> <a href="#">Бетонные площадки</a></li>
 													<li> <a href="#">Заезды на&nbsp;участок</a></li>
-													<li> <a href="#">Укладка тротуарной плитки</a></li>
+													<li> <a href="#">Мощение</a></li>
 													<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
 													<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
 													<li> <a href="#">Кованые изделия</a></li>
@@ -103,7 +103,7 @@
 											<ul>
 												<li> <a href="#">Бетонные площадки</a></li>
 												<li> <a href="#">Заезды на&nbsp;участок</a></li>
-												<li> <a href="#">Укладка тротуарной плитки</a></li>
+												<li> <a href="#">Мощение</a></li>
 												<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
 												<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
 												<li> <a href="#">Кованые изделия</a></li>
@@ -183,7 +183,7 @@
 										</div>
 									</div>
 									<div class="col-auto d-none d-md-flex">
-										<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+										<div class="label"> <span>Строим навесы с&nbsp;2019&nbsp;года</span>
 										</div>
 									</div>
 								</div>
@@ -511,7 +511,7 @@
 											<use xlink:href="img/svg/sprite.svg#logo-top"></use>
 										</svg>
 									</a>
-									<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+									<div class="label"> <span>Строим навесы с&nbsp;2019&nbsp;года</span>
 									</div>
 								</div>
 								<a class="footer__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика 
@@ -544,7 +544,7 @@
 								<ul>
 									<li><a href="#">Бетонные площадки</a></li>
 									<li><a href="#">Заезды на участок</a></li>
-									<li><a href="#">Укладка тротуарной плитки</a></li>
+									<li><a href="#">Мощение</a></li>
 									<li><a href="#">Ворота откатные и распашные</a></li>
 									<li><a href="#">Заборы и ограждения</a></li>
 									<li><a href="#">Кованые изделия</a></li>
