--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -50,7 +50,7 @@
 												<ul>
 													<li> <a href="#">Бетонные площадки</a></li>
 													<li> <a href="#">Заезды на&nbsp;участок</a></li>
-													<li> <a href="#">Укладка тротуарной плитки</a></li>
+													<li> <a href="#">Мощение</a></li>
 													<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
 													<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
 													<li> <a href="#">Кованые изделия</a></li>
@@ -103,7 +103,7 @@
 											<ul>
 												<li> <a href="#">Бетонные площадки</a></li>
 												<li> <a href="#">Заезды на&nbsp;участок</a></li>
-												<li> <a href="#">Укладка тротуарной плитки</a></li>
+												<li> <a href="#">Мощение</a></li>
 												<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
 												<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
 												<li> <a href="#">Кованые изделия</a></li>
@@ -183,7 +183,7 @@
 										</div>
 									</div>
 									<div class="col-auto d-none d-md-flex">
-										<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+										<div class="label"> <span>Строим навесы с&nbsp;2019&nbsp;года</span>
 										</div>
 									</div>
 								</div>
@@ -268,7 +268,7 @@
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Ангары</span>
 																</label>
-																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из СП</span>
+																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из сэндвич-панелей</span>
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Козырьки</span>
 																</label>
@@ -434,7 +434,7 @@
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Ангары</span>
 																</label>
-																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из СП</span>
+																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из сэндвич-панелей</span>
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Кованные навесы</span>
 																</label>
@@ -458,7 +458,7 @@
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Ангары</span>
 																</label>
-																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из СП</span>
+																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из сэндвич-панелей</span>
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Кованные навесы</span>
 																</label>
@@ -482,7 +482,7 @@
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Ангары</span>
 																</label>
-																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из СП</span>
+																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><span class="custom-input__text form-check-label">Гаражи из сэндвич-панелей</span>
 																</label>
 																<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Кованные навесы</span>
 																</label>
@@ -900,7 +900,7 @@
 											<use xlink:href="img/svg/sprite.svg#logo-top"></use>
 										</svg>
 									</a>
-									<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+									<div class="label"> <span>Строим навесы с&nbsp;2019&nbsp;года</span>
 									</div>
 								</div>
 								<a class="footer__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика 
@@ -933,7 +933,7 @@
 								<ul>
 									<li><a href="#">Бетонные площадки</a></li>
 									<li><a href="#">Заезды на участок</a></li>
-									<li><a href="#">Укладка тротуарной плитки</a></li>
+									<li><a href="#">Мощение</a></li>
 									<li><a href="#">Ворота откатные и распашные</a></li>
 									<li><a href="#">Заборы и ограждения</a></li>
 									<li><a href="#">Кованые изделия</a></li>
