--- a/public/05-thanks.html
+++ b/public/05-thanks.html
@@ -50,7 +50,7 @@
 												<ul>
 													<li> <a href="#">Бетонные площадки</a></li>
 													<li> <a href="#">Заезды на&nbsp;участок</a></li>
-													<li> <a href="#">Укладка тротуарной плитки</a></li>
+													<li> <a href="#">Мощение</a></li>
 													<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
 													<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
 													<li> <a href="#">Кованые изделия</a></li>
@@ -103,7 +103,7 @@
 											<ul>
 												<li> <a href="#">Бетонные площадки</a></li>
 												<li> <a href="#">Заезды на&nbsp;участок</a></li>
-												<li> <a href="#">Укладка тротуарной плитки</a></li>
+												<li> <a href="#">Мощение</a></li>
 												<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
 												<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
 												<li> <a href="#">Кованые изделия</a></li>
@@ -183,7 +183,7 @@
 										</div>
 									</div>
 									<div class="col-auto d-none d-md-flex">
-										<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+										<div class="label"> <span>Строим навесы с&nbsp;2019&nbsp;года</span>
 										</div>
 									</div>
 								</div>
