--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -216,7 +216,7 @@
 						<!-- start sFilter-->
 						<div class="sFilter">
 							<div class="dd-group-js">
-								<div class="dd-head-js d-flex d-lg-none justify-content-between">Показать фильтры
+								<div class="dd-head-js d-flex d-lg-none justify-content-between active">Показать фильтры
 									<svg class="icon icon-chevron-down ">
 										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 									</svg>
@@ -506,8 +506,8 @@
 								<div class="sProducts__input-wrap form-group">
 									<label><span class="sProducts__title"></span>
 										<select class="sProducts__input form-control">
-											<option>Цене ↑</option>
-											<option>Цене ↓</option>
+											<option>Цена ↑</option>
+											<option>Цена ↓</option>
 										</select>
 									</label>
 								</div>
