--- a/public/index.html
+++ b/public/index.html
@@ -511,6 +511,8 @@
 												</div>
 											</div>
 											<div class="col-lg-4">
+												<h4>Навес из поликарбоната</h4>
+												<p>Гарабиты: 6х6 м • Высота по столбам: 2,4 м</p>
 												<table>
 													<thead>
 														<tr>
@@ -576,7 +578,7 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Хочу примерно такой же</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Запросить расчет похожего навеса</a>
 											</div>
 										</div>
 									</div>
@@ -681,6 +683,8 @@
 												</div>
 											</div>
 											<div class="col-lg-4">
+												<h4>Навес из поликарбоната</h4>
+												<p>Гарабиты: 6х6 м • Высота по столбам: 2,4 м</p>
 												<table>
 													<thead>
 														<tr>
@@ -746,7 +750,7 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Хочу примерно такой же</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Запросить расчет похожего навеса</a>
 											</div>
 										</div>
 									</div>
@@ -851,6 +855,8 @@
 												</div>
 											</div>
 											<div class="col-lg-4">
+												<h4>Навес из поликарбоната</h4>
+												<p>Гарабиты: 6х6 м • Высота по столбам: 2,4 м</p>
 												<table>
 													<thead>
 														<tr>
@@ -916,7 +922,7 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Хочу примерно такой же</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Запросить расчет похожего навеса</a>
 											</div>
 										</div>
 									</div>
