--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -234,12 +234,12 @@
 													<use xlink:href="img/svg/sprite.svg#categories-4"></use>
 												</svg>
 											</a>
-											<a class="categories__item" href="#"><span>Как <br> выбрать</span>
+											<a class="categories__item" href="#"><span>Выбор <br> навеса</span>
 												<svg class="icon icon-categories-5 ">
 													<use xlink:href="img/svg/sprite.svg#categories-5"></use>
 												</svg>
 											</a>
-											<a class="categories__item" href="#"><span>Примеры <br> Наших работ</span>
+											<a class="categories__item" href="#"><span>Примеры <br> наших работ</span>
 												<svg class="icon icon-categories-6 ">
 													<use xlink:href="img/svg/sprite.svg#categories-6"></use>
 												</svg>
@@ -256,7 +256,7 @@
 							<div class="info-panel">
 								<div class="row">
 									<div class="col-auto">
-										<div class="info-panel__item info-panel__item--btn"><span>Как выбрать</span>
+										<div class="info-panel__item info-panel__item--btn"><span>Выбор навеса</span>
 										</div>
 									</div>
 									<div class="col-auto">
@@ -439,7 +439,7 @@
 				<div class="sBlog section sBlog sBlog--content" id="sBlog">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>Продолжайте читать</h2>
+							<h2>Узнать больше:</h2>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
@@ -773,9 +773,7 @@
 							</div>
 							<div class="col-md-6 col-lg-4 col-xl-3">
 								<div class="adv-item adv-item--white">
-									<div class="adv-item__title">Наши соц. сети
-									</div>
-									<div class="adv-item__caption">Смотрите <br> и&nbsp;пишите
+									<div class="adv-item__caption">Посетите официальные сообщества в&nbsp;соц. сетях:
 									</div>
 									<div class="social">
 										<a class="social__item" href="#" target="_blank">
@@ -783,21 +781,21 @@
 												<svg class="icon icon-instagram ">
 													<use xlink:href="img/svg/sprite.svg#instagram"></use>
 												</svg>
-											</div><span>instagram</span>
+											</div><span>Instagram</span>
 										</a>
 										<a class="social__item" href="#" target="_blank">
 											<div class="social__icon-wrap">
 												<svg class="icon icon-youtube ">
 													<use xlink:href="img/svg/sprite.svg#youtube"></use>
 												</svg>
-											</div><span>youtube</span>
+											</div><span>YouTube</span>
 										</a>
 										<a class="social__item" href="#" target="_blank">
 											<div class="social__icon-wrap">
 												<svg class="icon icon-whatsapp ">
 													<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
 												</svg>
-											</div><span>whatsapp</span>
+											</div><span>Whatsapp</span>
 										</a>
 									</div>
 								</div>
@@ -1086,9 +1084,9 @@
 								<div class="adv-item adv-item--white">
 									<div class="adv-item__title">Каталог
 									</div>
-									<div class="adv-item__caption">Бесплатно: замер, расчет сметы <br> и&nbsp;3D-макет
+									<div class="adv-item__caption">Замер, расчет сметы <br> и&nbsp;3D-макет
 									</div>
-									<a class="adv-item__btn" href="#">Получить даром
+									<a class="adv-item__btn" href="#">Получить бесплатно
 									</a>
 								</div>
 							</div>
