--- a/public/02-blogs.html
+++ b/public/02-blogs.html
@@ -227,12 +227,12 @@
 													<use xlink:href="img/svg/sprite.svg#categories-4"></use>
 												</svg>
 											</a>
-											<a class="categories__item" href="#"><span>Как <br> выбрать</span>
+											<a class="categories__item" href="#"><span>Выбор <br> навеса</span>
 												<svg class="icon icon-categories-5 ">
 													<use xlink:href="img/svg/sprite.svg#categories-5"></use>
 												</svg>
 											</a>
-											<a class="categories__item" href="#"><span>Примеры <br> Наших работ</span>
+											<a class="categories__item" href="#"><span>Примеры <br> наших работ</span>
 												<svg class="icon icon-categories-6 ">
 													<use xlink:href="img/svg/sprite.svg#categories-6"></use>
 												</svg>
@@ -298,6 +298,7 @@
 							</div>
 							<div class="col-lg-4 col-xl-3 d-none d-lg-block">
 								<div class="categories">
+									<h6>Категории</h6>
 									<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span>
 										<svg class="icon icon-categories-1 ">
 											<use xlink:href="img/svg/sprite.svg#categories-1"></use>
@@ -318,12 +319,12 @@
 											<use xlink:href="img/svg/sprite.svg#categories-4"></use>
 										</svg>
 									</a>
-									<a class="categories__item" href="#"><span>Как <br> выбрать</span>
+									<a class="categories__item" href="#"><span>Выбор <br> навеса</span>
 										<svg class="icon icon-categories-5 ">
 											<use xlink:href="img/svg/sprite.svg#categories-5"></use>
 										</svg>
 									</a>
-									<a class="categories__item" href="#"><span>Примеры <br> Наших работ</span>
+									<a class="categories__item" href="#"><span>Примеры <br> наших работ</span>
 										<svg class="icon icon-categories-6 ">
 											<use xlink:href="img/svg/sprite.svg#categories-6"></use>
 										</svg>
@@ -663,9 +664,7 @@
 							</div>
 							<div class="col-md-6 col-lg-4 col-xl-3">
 								<div class="adv-item adv-item--white">
-									<div class="adv-item__title">Наши соц. сети
-									</div>
-									<div class="adv-item__caption">Смотрите <br> и&nbsp;пишите
+									<div class="adv-item__caption">Посетите официальные сообщества в&nbsp;соц. сетях:
 									</div>
 									<div class="social">
 										<a class="social__item" href="#" target="_blank">
@@ -673,21 +672,21 @@
 												<svg class="icon icon-instagram ">
 													<use xlink:href="img/svg/sprite.svg#instagram"></use>
 												</svg>
-											</div><span>instagram</span>
+											</div><span>Instagram</span>
 										</a>
 										<a class="social__item" href="#" target="_blank">
 											<div class="social__icon-wrap">
 												<svg class="icon icon-youtube ">
 													<use xlink:href="img/svg/sprite.svg#youtube"></use>
 												</svg>
-											</div><span>youtube</span>
+											</div><span>YouTube</span>
 										</a>
 										<a class="social__item" href="#" target="_blank">
 											<div class="social__icon-wrap">
 												<svg class="icon icon-whatsapp ">
 													<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
 												</svg>
-											</div><span>whatsapp</span>
+											</div><span>Whatsapp</span>
 										</a>
 									</div>
 								</div>
@@ -976,9 +975,9 @@
 								<div class="adv-item adv-item--white">
 									<div class="adv-item__title">Каталог
 									</div>
-									<div class="adv-item__caption">Бесплатно: замер, расчет сметы <br> и&nbsp;3D-макет
+									<div class="adv-item__caption">Замер, расчет сметы <br> и&nbsp;3D-макет
 									</div>
-									<a class="adv-item__btn" href="#">Получить даром
+									<a class="adv-item__btn" href="#">Получить бесплатно
 									</a>
 								</div>
 							</div>
