--- a/public/05-thanks.html
+++ b/public/05-thanks.html
@@ -200,10 +200,10 @@
 					<div class="section-title text-center">
 						<h4>Ура!</h4>
 						<h1>Спасибо за&nbsp;ваше обращение</h1>
-						<p>Мы&nbsp;работаем с&nbsp;понедельника по&nbsp;воскресенье с&nbsp;09:00 до&nbsp;21:00 и&nbsp;свяжемся с&nbsp;вами в&nbsp;рабочее время</p>
+						<p>Мы&nbsp;свяжемся с&nbsp;вами в&nbsp;самое ближайшее время</p>
 					</div>
 					<div class="sThanks__block">
-						<h6>Если вам срочно требуется связаться с&nbsp;нами:</h6>
+						<h6>Связаться с&nbsp;нами прямо сейчас:</h6>
 						<div class="row">
 							<div class="col-md-6 col-lg-auto">
 								<a class="sThanks__contact" href="tel:+74952122320">
@@ -218,7 +218,7 @@
 							</div>
 							<div class="col-md-6 col-lg-auto">
 								<a class="sThanks__contact" href="#">
-									<p>или напишите нам в&nbsp;WhatsApp</p>
+									<p>напишите нам в&nbsp;WhatsApp</p>
 									<h4>+7 495 212 23 20</h4>
 									<div class="sThanks__icon-wrap">
 										<svg class="icon icon-whatsapp ">
@@ -248,7 +248,7 @@
 							</div>
 							<div class="col-sm-6 col-lg-3">
 								<div class="sThanks__link">
-									<h6>Посмотрите <br> наш инстаграм</h6>
+									<h6>Посмотрите <br> наш Инстаграм</h6>
 									<a class="sThanks__btn" href="#">Перейти
 									</a>
 								</div>
