--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -129,7 +129,7 @@
 											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Запросить обратный звонок" data-pic="2">
+									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">
 										<svg class="icon icon-phone-call ">
 											<use xlink:href="img/svg/sprite.svg#phone-call"></use>
 										</svg>
@@ -198,12 +198,12 @@
 				<div class="row">
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Получить расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Получить расчет" data-pic="2">Получить расчет</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Запросить обратный звонок" data-pic="2">Запросить обратный звонок</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Запросить обратный звонок" data-pic="2">Запросить обратный звонок (хочу навес)</a></div>
+										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">Заказать обратный звонок</a></div>
+										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Заказать обратный звонок (хочу навес)</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Запросить расчет похожего</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Запросить детальный расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Запросить расчет" data-pic="1">Запросить расчет детальный</a></div>
+										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Запросить детальный расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Запросить расчет" data-pic="1">Запросить детальный расчет</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Записаться на&amp;nbsp;экскурсию по&amp;nbsp;производству" data-text="Оставьте свой номер телефона, мы&amp;nbsp;перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут и&amp;nbsp;запишем вас" data-btn="Запсиаться на&amp;nbsp;экскурсию" data-pic="1">Записаться на экскурсию</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-reviews">Обзор</a></div>
+										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-reviews">Читать отзыв</a></div>
 				</div>
 			</div>
 			<footer class="footer">
