--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
 											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Запросить обратный звонок" data-pic="2">
+									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">
 										<svg class="icon icon-phone-call ">
 											<use xlink:href="img/svg/sprite.svg#phone-call"></use>
 										</svg>
@@ -1460,7 +1460,7 @@
 														<td>Сот. поликарбонат</td>
 													</tr>
 												</table>
-												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Запросить обратный звонок" data-pic="2">Хочу такой навес
+												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Хочу такой навес
 												</a>
 											</div>
 										</div>
@@ -1492,7 +1492,7 @@
 														<td>Сот. поликарбонат</td>
 													</tr>
 												</table>
-												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Запросить обратный звонок" data-pic="2">Хочу такой навес
+												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Хочу такой навес
 												</a>
 											</div>
 										</div>
@@ -1524,7 +1524,7 @@
 														<td>Сот. поликарбонат</td>
 													</tr>
 												</table>
-												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Запросить обратный звонок" data-pic="2">Хочу такой навес
+												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Хочу такой навес
 												</a>
 											</div>
 										</div>
@@ -1556,7 +1556,7 @@
 														<td>Сот. поликарбонат</td>
 													</tr>
 												</table>
-												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Запросить обратный звонок" data-pic="2">Хочу такой навес
+												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Хочу такой навес
 												</a>
 											</div>
 										</div>
@@ -1588,7 +1588,7 @@
 														<td>Сот. поликарбонат</td>
 													</tr>
 												</table>
-												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Запросить обратный звонок" data-pic="2">Хочу такой навес
+												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Хочу такой навес
 												</a>
 											</div>
 										</div>
@@ -1620,7 +1620,7 @@
 														<td>Сот. поликарбонат</td>
 													</tr>
 												</table>
-												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Запросить обратный звонок" data-pic="2">Хочу такой навес
+												<a class="sTypical__btn link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Хочу такой навес
 												</a>
 											</div>
 										</div>
@@ -2830,7 +2830,7 @@
 											<use xlink:href="img/svg/sprite.svg#youtube"></use>
 										</svg>
 									</a>
-									<a class="sContact__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Запросить обратный звонок" data-pic="2">Обратный звонок
+									<a class="sContact__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">Обратный звонок
 									</a>
 								</div>
 							</div>
