--- a/public/05-thanks.html
+++ b/public/05-thanks.html
@@ -129,7 +129,7 @@
 											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Запросить обратный звонок" data-pic="2">
+									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">
 										<svg class="icon icon-phone-call ">
 											<use xlink:href="img/svg/sprite.svg#phone-call"></use>
 										</svg>
