--- a/public/index.html
+++ b/public/index.html
@@ -578,7 +578,7 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Запросить расчет похожего навеса</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
 											</div>
 										</div>
 									</div>
@@ -750,7 +750,7 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Запросить расчет похожего навеса</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
 											</div>
 										</div>
 									</div>
@@ -922,7 +922,7 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Запросить расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Запросить расчет" data-pic="2">Запросить расчет похожего навеса</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
 											</div>
 										</div>
 									</div>
@@ -1336,7 +1336,7 @@
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-12">
-										<a class="form-wrap__btn link-modal-js" href="#modal-call" data-title="Запросить детальный расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Запросить расчет" data-pic="1">Получить точный расчет <br> за&nbsp;15&nbsp;минут
+										<a class="form-wrap__btn link-modal-js" href="#modal-call" data-title="Заказать детальный расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Заказать расчет" data-pic="1">Получить точный расчет <br> за&nbsp;15&nbsp;минут
 										</a>
 									</div>
 									<div class="col-12">
