--- a/public/index.html
+++ b/public/index.html
@@ -2647,7 +2647,7 @@
 												<source type="image/webp" srcset="img/@2x/webp/catalogItem-1.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-1.jpg" alt="" loading="lazy"/>
 											</picture>
 											<!-- /picture-->
-											<h6>Укладка тротуарной <br> плитки</h6>
+											<h6>Мощение</h6>
 											<div class="small">от 59 150 ₽</div>
 											<a class="catalogItem__btn link-modal-js" href="#modal-call" data-title="Получить расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Получить расчет" data-pic="2">Получить расчет
 											</a>
