--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -372,7 +372,7 @@
 										<td>7 дней • 1 день</td>
 									</tr>
 								</tbody>
-							</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2"></a>
+							</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Хочу примерно такой же</a>
 							<button class="btn btn-outline-secondary">Сохранить себе</button>
 						</div>
 					</div>
